--- a/web/assets/css/layout.css
+++ b/web/assets/css/layout.css
@@ -33,7 +33,7 @@ text-decoration: underline;
 
 /* Header */
 #project {
-background-color:#EEC900;
+background-color:#F9F2A7;
 margin:0px 0px 0px 0px;
 padding:10px 0px 10px 15px;
 width:94%;
